# python_app_coding2

./: LICENSE  README.en.md  README.md  demo_newline.txt  readme.py  temp.dbf  temp.hdf5  temp.py  test_jupyternb.ipynb
appendix_a/: aa_user_defined_exception.py  python_builtin_exceptions_a1
chapter-01/: pip_usage.txt
chapter01/: content01.md  demo_code1.py  install_python.md
chapter02/: install_anaconda.md
chapter03/: sysargv.py  use_ipython.md
chapter04/: instruction_for_pycharm.md
chapter05/: sec5105_para_transfer.py  sec553_ordereddict.py  sec582b_special_methodspy  sec583_class_property.py  sec584_encapsulation_private_member.py  sec585_class_inherit_attr_search.py  sec585_class_protected_member.py  sec585b_class_inherit_search.py  set581_class_def_cteate_object.py  set582_create_object.py
chapter05--DataType/sec511/: sec511_operation.py
chapter05--DataType/sec53/: sec53_list_example.py
chapter05--DataType/sec54/: sec54_create_tuple.py
chapter05--DataType/sec58/: sec582b_class_special_methods.py
chapter05--DataType/sec59/: sec59_slice.py
chapter05/sec51/: sec51_constant_object.py  sec51_number_object.py  sec51_show_debug.py
chapter05/sec510/: sec5104_shallow_deep_copy.py  sec510_time_scripts.py  sec5112_time.py  sec5113_datetime.py
chapter05/sec52/: sec524.py  sec524_test_coding.py  sec52_str_resident.py
chapter05/sec53/: sec53_list_example.py
chapter05/sec54/: sec54_create_tuple.py  sec54_tuple.py
chapter05/sec56/: sec56_set.py
chapter05/sec57/: sec57_func.py  sec57_para_passing.py
chapter05/sec58/: set581_class_def_cteate_object.py  set582_class_method_deprecated.py
chapter05/sec59/: sec59_object_ref.py  sec59_object_weak_ref.py  sec59_para_pass.py  sec59_shallow_copy.py
chapter06/: sec611_for_in_loop.py  sec613_if_elif_else.py  sec614_comprehension_expression.py  sec616_with_object.py  sec622_iterable.py  sec623_generator.py  sec632_closure.py  sec633_fun_decrator.py  sec634_class_decorator.py  sec635_class_dec_class.py  sec636_deco_method.py  sec637_singled_dispatch.py  sec638_dec_by_wraps.py  sec639_dec_conclution.py  sec641_module.py  sec652_package.py
chapter06--FlowStatements/sec61/: sec611_for_in_loop.py  sec612_while_loop.py  sec614_comprehension_expression.py  sec615_try_except.py
chapter06--FlowStatements/sec65/demo_project/: README.rst  pyproject.toml
chapter06--FlowStatements/sec65/demo_project/src/demo_package.egg-info/: entry_points.txt
chapter06--FlowStatements/sec65/demo_project/src/demo_package_author/: __init__.py
chapter06--FlowStatements/sec65/demo_project/src/demo_package_author.egg-info/: entry_points.txt
chapter06/sec65/demo_project/: pyproject.toml
chapter06/sec65/demo_project/etc/: tox.ini  tox_template.ini
chapter06/sec65/demo_project/src/demo_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
chapter06/sec65/demo_project/src/demo_package_author/: f2c.py
chapter06/sec65/demo_project/src/demo_package_author.egg-info/: PKG-INFO  SOURCES.txt
chapter06/sec65/demo_project/src/tests/: test_f2c.py
chapter06/sec65/foo-project/: README.rst  pyproject.toml
chapter06/sec65/foo-project/docs/source/: conf.py
chapter06/sec65/foo-project/etc/: README.md  how_to_sphinx_docs
chapter06/sec65/foo-project/src/foo_pkg/: __init__.py  hello.py
chapter06/sec65/foo-project/src/foo_pkg_author.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
chapter06/sec65/foo-project/src/tests/: test_hello.py
chapter07/: demo_doctest.py  sec74_com_score.py  sec75_date_app.py
chapter08/: module_attrs.py  module_inspect.py  path_traverse.py
chapter09/: demo_newline.txt  linecache_read_text_line.py  linecache_usage.py  open_newline.py  open_newline_usage.py  open_usage_newline.py  sec91_open_newline.py  sec93_pickle.py  sec94_rand_read_text.py
chapter10/: numpy_text_file.py
chapter11/: excel_xlwings.py  xlwings.md  xlwings_tutorial.md
chapter15--read-write-dbf/pddbf/: README.rst  pyproject.toml
chapter15--read-write-dbf/pddbf/docs/source/: index.rst  pddbf.rst
chapter15--read-write-dbf/pddbf/src/pddbf/: dbfreader.py  dbfwriter.py  pddbf.py
chapter15--read-write-dbf/pddbf/src/tests/: doctest_pddbf_pddbf.py  doctest_read_dbf.py  doctest_read_dbf_header.py  doctest_resolve_header.py  test_dbf_reader.py  test_dbf_writer.py  test_resolve_header.py
xappendix_a/: python_builtin_exceptions_a2
xappendix_b/: demo_decimal_round.py
xappendix_c/: font_size
xappendix_d/: demo_code_mode.py  demo_pep8.py  demo_pep8_code_format.py  demo_pep8_code_mode.py  demo_pep8_import.py  demo_pep8_name.py
xappendix_e/: group_pattern.py  mo_attr.py  mo_method_expand.py  mo_method_group.py  mo_method_groupdict.py  mo_method_groups.py  mo_method_pos.py  re_exception.py  re_mathod_match.py  re_method_compile.py  re_method_escape.py  re_method_findall.py  re_method_fullmatch.py  re_method_search.py  re_method_sub.py  re_method_subn.py  reo_attr_flag.py  reo_method_findall.py  reo_method_match.py  reo_method_search.py  reo_method_split.py  reo_method_sub.py  rex_app_pattern.py  rex_greedy_lazy_pattern.py  rex_useful_pattern.py
xappendix_f/: demo_2dcode.py
xerrata/: corrigendum_v150_630bak  corrigendum_v15_630  corrigendum_v15_630 - 副本  corrigendum_v15_630_706  corrigendum_v15_630bak705  corrigendum_v15_630m2bak
(+204 files in other folders)
