[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    ]
build-backend = "setuptools.build_meta"

[project]
name = "pddbf-package-wangxichang"
version = "0.0.1"
authors = [
  { name="wangxichang", email="wangxichang@126.com"},
]
description = "this is a package for reading dbf to DataFrame and writign DataFrame to dbf"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# 有关文档链接
# [project.urls]
# "Homepage" = "https://github.com/pypa/fooeproject"
# "Bug Tracker" = "https://github.com/pypa/fooproject/issues"

# 按照条件搜索发行包位置
# [tool.setuptools.packages.find]
# where = ["src"]                               # ["."] by default
# include = ["demo_package_author*"]            # ["*"] by default
# exclude = ["demo_package_author.tests*"]      # empty by default
# namespaces = false                            # true by default

# 自动搜索发行包路径
# [tool.setuptools.packages]
# find = {}                                     # Scan the project directory with the default parameters

# 指定发行包路径
[tool.setuptools]
packages = ["pddbf"]
package-dir = {"" = "src.pddbf"}

# 设置程序运行入口点
[project.scripts]
fc = "pddbf.pddbf:to_csv"
